// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" class=\\"orientation-top\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a1 1 0 0 1 1 1v13.586l5.293-5.293a1 1 0 0 1 1.414 1.414l-7 7a1 1 0 0 1-1.414 0l-7-7a1 1 0 1 1 1.414-1.414L11 17.586V4a1 1 0 0 1 1-1Z\\"></path>
</svg>"
`;

exports[` 2`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" class=\\"\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M3.246 7.123c.997-1.81 2.591-3.418 4.485-4.222 1.894-.905 4.087-1.106 6.08-.704 2.193.403 3.788 1.408 5.183 3.016.2.201.4.503.598.704l.4-2.513c.099-.603.597-.905 1.195-.905.499.1.897.704.798 1.206l-.897 5.127c0 .301-.2.502-.4.603-.198.1-.398.201-.597.201h-.2l-4.983-.905a1.042 1.042 0 0 1-.798-1.206c.1-.503.598-.905 1.197-.804l2.79.603c-.1-.302-.299-.503-.598-.804-1.096-1.307-2.492-2.111-4.086-2.413-1.595-.402-3.39-.2-4.884.503A7.896 7.896 0 0 0 4.94 8.028c-.797 1.507-1.096 3.216-.897 4.925.2 1.709.897 3.317 2.093 4.524 1.097 1.206 2.692 2.11 4.286 2.311 1.595.302 3.39 0 4.785-.703a8.444 8.444 0 0 0 3.488-3.518c.2-.503.798-.704 1.296-.503.498.201.698.804.498 1.307-.797 2.11-2.292 3.619-4.186 4.624-1.395.703-2.89 1.005-4.485 1.005-.598 0-1.096 0-1.695-.1-2.093-.403-3.987-1.408-5.382-2.916a10.256 10.256 0 0 1-2.691-5.629c-.2-2.211.2-4.322 1.196-6.232Z\\"></path>
</svg>"
`;

exports[` 3`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M11.806 3C6.929 3 3 6.565 3 12a1 1 0 1 1-2 0C1 5.435 5.85 1 11.806 1c4.759 0 8.742 2.543 10.141 6.68a1 1 0 0 1-1.894.64C18.973 5.127 15.853 3 11.806 3ZM22 11a1 1 0 0 1 1 1c0 6.565-4.85 11-10.806 11-4.758 0-8.742-2.543-10.141-6.68a1 1 0 0 1 1.894-.64c1.08 3.193 4.2 5.32 8.247 5.32C17.071 21 21 17.435 21 12a1 1 0 0 1 1-1Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M22.242 3.03a1 1 0 0 1 .728 1.213l-1 4a1 1 0 0 1-1.212.727l-4-1a1 1 0 1 1 .485-1.94l3.03.757.757-3.03a1 1 0 0 1 1.212-.727ZM2.03 15.758a1 1 0 0 1 1.213-.728l4 1a1 1 0 1 1-.486 1.94l-3.03-.757-.757 3.03a1 1 0 1 1-1.94-.485l1-4Z\\"></path>
</svg>"
`;

exports[` 4`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M15 4v.375c2.818.934 4.978 3.525 5.015 6.614v3.8c0 .724.098 1.259.368 1.671l.286.437c.857 1.305-.045 3.103-1.654 3.103h-3.142a3.999 3.999 0 0 1-7.746 0H4.985c-1.606 0-2.513-1.796-1.654-3.103h.001l.286-.438c.27-.411.367-.944.367-1.669v-3.797C4.007 7.897 6.17 5.284 9 4.359V4a3 3 0 1 1 6 0Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a1 1 0 0 0-1 1h2a1 1 0 0 0-1-1Zm3 1.375V4a3 3 0 0 0-6 0v.359c-2.83.925-4.993 3.538-5.015 6.634v3.797c0 .725-.097 1.258-.367 1.67l-.286.436v.001C2.471 18.204 3.378 20 4.984 20h3.142a4 4 0 0 0 7.746 0h3.142c1.61 0 2.511-1.798 1.654-3.103l-.286-.437c-.27-.412-.368-.947-.368-1.671v-3.8c-.037-3.09-2.197-5.68-5.015-6.614ZM11.223 6h.038l1.458.003c2.84.007 5.26 2.305 5.296 5.004v3.782c0 .856.104 1.865.695 2.767l.287.438A.15.15 0 0 1 19 18H5l.003-.004v-.002l.287-.438c.592-.902.695-1.911.695-2.766v-3.786C6.006 8.313 8.404 6.01 11.223 6Zm2.51 14h-3.465A1.997 1.997 0 0 0 12 21a2 2 0 0 0 1.732-1Z\\"></path>
</svg>"
`;

exports[` 5`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"m19.707 5.707-14 14-1.414-1.414 14-14 1.414 1.414Z\\"></path>
</svg>"
`;

exports[` 6`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M6 3a5 5 0 0 0-5 5v10a5 5 0 0 0 5 5h12a5 5 0 0 0 5-5V8a5 5 0 0 0-5-5H6Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M6 5a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3V8a3 3 0 0 0-3-3H6ZM1 8a5 5 0 0 1 5-5h12a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H6a5 5 0 0 1-5-5V8Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8 1a1 1 0 0 1 1 1v4a1 1 0 0 1-2 0V2a1 1 0 0 1 1-1Zm8 0a1 1 0 0 1 1 1v4a1 1 0 1 1-2 0V2a1 1 0 0 1 1-1ZM1 10a1 1 0 0 1 1-1h20a1 1 0 1 1 0 2H2a1 1 0 0 1-1-1Z\\"></path>
</svg>"
`;

exports[` 7`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M4.227 6.366A1 1 0 0 1 5 6h13.79a3 3 0 0 1 2.985 3.299l-.6 6A3 3 0 0 1 18.19 18H8.64a3.001 3.001 0 0 1-2.943-2.412L4.02 7.196a1 1 0 0 1 .208-.83Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M4.227 6.366A1 1 0 0 1 5 6h13.79a3 3 0 0 1 2.985 3.299l-.6 6A3 3 0 0 1 18.19 18H8.64a3.001 3.001 0 0 1-2.943-2.412L4.02 7.196a1 1 0 0 1 .208-.83ZM6.22 8l1.439 7.196a1 1 0 0 0 .98.804h9.551a1 1 0 0 0 .995-.9l.6-6A1 1 0 0 0 18.79 8H6.22Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M1 3a1 1 0 0 1 1-1h1.22a2 2 0 0 1 1.94 1.514l.81 3.244a1 1 0 0 1-1.94.484L3.22 4H2a1 1 0 0 1-1-1Zm6 18a1 1 0 0 1 1-1h2a1 1 0 1 1 0 2H8a1 1 0 0 1-1-1Zm8 0a1 1 0 0 1 1-1h2a1 1 0 1 1 0 2h-2a1 1 0 0 1-1-1Z\\"></path>
</svg>"
`;

exports[` 8`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M13.905 2.044c3.557 0 5.508 0 6.842 1.344 1.325 1.363 1.325 3.338 1.325 6.914 0 3.575-.11 5.66-1.325 6.886-1.216 1.225-4.075 1.344-7.405 1.344-.41 0-.816.091-1.189.265L7.126 21.98a.902.902 0 0 1-.48.137.848.848 0 0 1-.436-.12.91.91 0 0 1-.472-.795v-2.88a4.089 4.089 0 0 1-2.296-1.134c-1.334-1.335-1.334-3.31-1.334-6.886s.009-5.597 1.334-6.914c1.325-1.317 3.321-1.317 6.833-1.344h3.63Z\\" fill=\\"none\\"></path>
  <path d=\\"M21.493 2.445C20.075 1 17.879 1 13.976 1H9.984C6.1 1 3.924 1 2.457 2.445.99 3.891 1 6.1 1 10.033s0 6.092 1.457 7.557a4.542 4.542 0 0 0 2.536 1.245v3.161a1.008 1.008 0 0 0 .519.873c.144.088.31.133.479.13.187.002.37-.05.529-.15l5.57-3.492a3.1 3.1 0 0 1 1.297-.291c3.674 0 6.818-.13 8.146-1.476C22.86 16.245 23 13.957 23 10.033c0-3.924-.04-6.092-1.507-7.588Zm-1.418 13.73c-.858.863-4.83.873-6.737.883a4.97 4.97 0 0 0-2.216.522l-.1.05-3.993 2.55v-2.218a1.01 1.01 0 0 0-.256-.677.996.996 0 0 0-.642-.327 3.353 3.353 0 0 1-2.216-.783c-.879-.883-.879-2.64-.879-6.142 0-3.503 0-5.26.879-6.143.878-.883 2.625-.883 6.109-.883h3.992c3.484 0 5.23 0 6.11.883.878.884.878 2.64.878 6.143 0 3.503-.04 5.259-.929 6.142Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 6a1 1 0 0 1 1 1v2h2a1 1 0 1 1 0 2h-2v2a1 1 0 1 1-2 0v-2H9a1 1 0 1 1 0-2h2V7a1 1 0 0 1 1-1Z\\"></path>
</svg>"
`;

exports[` 9`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M13.905 2.044c3.557 0 5.508 0 6.842 1.344 1.325 1.363 1.325 3.338 1.325 6.914 0 3.575-.11 5.66-1.325 6.886-1.216 1.225-4.075 1.344-7.405 1.344-.41 0-.816.091-1.189.265L7.126 21.98a.902.902 0 0 1-.48.137.848.848 0 0 1-.436-.12.91.91 0 0 1-.472-.795v-2.88a4.089 4.089 0 0 1-2.296-1.134c-1.334-1.335-1.334-3.31-1.334-6.886s.009-5.597 1.334-6.914c1.325-1.317 3.321-1.317 6.833-1.344h3.63Z\\" fill=\\"none\\"></path>
  <path d=\\"M21.493 2.445C20.075 1 17.879 1 13.976 1H9.984C6.1 1 3.924 1 2.457 2.445.99 3.891 1 6.1 1 10.033s0 6.092 1.457 7.557a4.542 4.542 0 0 0 2.536 1.245v3.161a1.008 1.008 0 0 0 .519.873c.144.088.31.133.479.13.187.002.37-.05.529-.15l5.57-3.492a3.1 3.1 0 0 1 1.297-.291c3.674 0 6.818-.13 8.146-1.476C22.86 16.245 23 13.957 23 10.033c0-3.924-.04-6.092-1.507-7.588Zm-1.418 13.73c-.858.863-4.83.873-6.737.883a4.97 4.97 0 0 0-2.216.522l-.1.05-3.993 2.55v-2.218a1.01 1.01 0 0 0-.256-.677.996.996 0 0 0-.642-.327 3.353 3.353 0 0 1-2.216-.783c-.879-.883-.879-2.64-.879-6.142 0-3.503 0-5.26.879-6.143.878-.883 2.625-.883 6.109-.883h3.992c3.484 0 5.23 0 6.11.883.878.884.878 2.64.878 6.143 0 3.503-.04 5.259-.929 6.142Z\\"></path>
  <path d=\\"m15.414 6.018-4.542 5.46L8.506 9.11a.998.998 0 0 0-1.092-.22 1.006 1.006 0 0 0-.325 1.635l3.144 3.162a1 1 0 0 0 .709.301h.05a.995.995 0 0 0 .718-.361l5.24-6.323a1.008 1.008 0 0 0-.129-1.415.996.996 0 0 0-1.407.13Z\\"></path>
</svg>"
`;

exports[` 10`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M13.905 2.044c3.557 0 5.508 0 6.842 1.344 1.325 1.363 1.325 3.338 1.325 6.914 0 3.575-.11 5.66-1.325 6.886-1.216 1.225-4.075 1.344-7.405 1.344-.41 0-.816.091-1.189.265L7.126 21.98a.902.902 0 0 1-.48.137.848.848 0 0 1-.436-.12.91.91 0 0 1-.472-.795v-2.88a4.089 4.089 0 0 1-2.296-1.134c-1.334-1.335-1.334-3.31-1.334-6.886s.009-5.597 1.334-6.914c1.325-1.317 3.321-1.317 6.833-1.344h3.63Z\\" fill=\\"none\\"></path>
  <path d=\\"M21.493 2.445C20.075 1 17.879 1 13.976 1H9.984C6.1 1 3.924 1 2.457 2.445.99 3.891 1 6.1 1 10.033s0 6.092 1.457 7.557a4.542 4.542 0 0 0 2.536 1.245v3.161a1.008 1.008 0 0 0 .519.873c.144.088.31.133.479.13.187.002.37-.05.529-.15l5.57-3.492a3.1 3.1 0 0 1 1.297-.291c3.674 0 6.818-.13 8.146-1.476C22.86 16.245 23 13.957 23 10.033c0-3.924-.04-6.092-1.507-7.588Zm-1.418 13.73c-.858.863-4.83.873-6.737.883a4.97 4.97 0 0 0-2.216.522l-.1.05-3.993 2.55v-2.218a1.01 1.01 0 0 0-.256-.677.996.996 0 0 0-.642-.327 3.353 3.353 0 0 1-2.216-.783c-.879-.883-.879-2.64-.879-6.142 0-3.503 0-5.26.879-6.143.878-.883 2.625-.883 6.109-.883h3.992c3.484 0 5.23 0 6.11.883.878.884.878 2.64.878 6.143 0 3.503-.04 5.259-.929 6.142Z\\"></path>
</svg>"
`;

exports[` 11`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M13.905 2.044c3.557 0 5.508 0 6.842 1.344 1.325 1.363 1.325 3.338 1.325 6.914 0 3.575-.11 5.66-1.325 6.886-1.216 1.225-4.075 1.344-7.405 1.344-.41 0-.816.091-1.189.265L7.126 21.98a.902.902 0 0 1-.48.137.848.848 0 0 1-.436-.12.91.91 0 0 1-.472-.795v-2.88a4.089 4.089 0 0 1-2.296-1.134c-1.334-1.335-1.334-3.31-1.334-6.886s.009-5.597 1.334-6.914c1.325-1.317 3.321-1.317 6.833-1.344h3.63Z\\" fill=\\"none\\"></path>
  <path d=\\"M21.493 2.445C20.075 1 17.879 1 13.976 1H9.984C6.1 1 3.924 1 2.457 2.445.99 3.891 1 6.1 1 10.033s0 6.092 1.457 7.557a4.542 4.542 0 0 0 2.536 1.245v3.161a1.008 1.008 0 0 0 .519.873c.144.088.31.133.479.13.187.002.37-.05.529-.15l5.57-3.492a3.1 3.1 0 0 1 1.297-.291c3.674 0 6.818-.13 8.146-1.476C22.86 16.245 23 13.957 23 10.033c0-3.924-.04-6.092-1.507-7.588Zm-1.418 13.73c-.858.863-4.83.873-6.737.883a4.97 4.97 0 0 0-2.216.522l-.1.05-3.993 2.55v-2.218a1.01 1.01 0 0 0-.256-.677.996.996 0 0 0-.642-.327 3.353 3.353 0 0 1-2.216-.783c-.879-.883-.879-2.64-.879-6.142 0-3.503 0-5.26.879-6.143.878-.883 2.625-.883 6.109-.883h3.992c3.484 0 5.23 0 6.11.883.878.884.878 2.64.878 6.143 0 3.503-.04 5.259-.929 6.142Z\\"></path>
  <path d=\\"M8 9a1 1 0 0 1 1 1v.01a1 1 0 1 1-2 0V10a1 1 0 0 1 1-1Zm4 0a1 1 0 0 1 1 1v.01a1 1 0 1 1-2 0V10a1 1 0 0 1 1-1Zm4 0a1 1 0 0 1 1 1v.01a1 1 0 1 1-2 0V10a1 1 0 0 1 1-1Z\\"></path>
</svg>"
`;

exports[` 12`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M20.64 5.232a1 1 0 0 1 .128 1.408l-10 12a1 1 0 0 1-1.475.067l-6-6a1 1 0 1 1 1.414-1.414l5.226 5.226 9.299-11.16a1 1 0 0 1 1.408-.127Z\\"></path>
</svg>"
`;

exports[` 13`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M3.293 8.293a1 1 0 0 1 1.414 0L12 15.586l7.293-7.293a1 1 0 1 1 1.414 1.414l-8 8a1 1 0 0 1-1.414 0l-8-8a1 1 0 0 1 0-1.414Z\\"></path>
</svg>"
`;

exports[` 14`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M7.707 7.293a1 1 0 0 1 0 1.414L4.414 12l3.293 3.293a1 1 0 1 1-1.414 1.414l-4-4a1 1 0 0 1 0-1.414l4-4a1 1 0 0 1 1.414 0Zm8.586 0a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1 0 1.414l-4 4a1 1 0 0 1-1.414-1.414L19.586 12l-3.293-3.293a1 1 0 0 1 0-1.414Z\\"></path>
</svg>"
`;

exports[` 15`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M15.707 3.293a1 1 0 0 1 0 1.414L8.414 12l7.293 7.293a1 1 0 0 1-1.414 1.414l-8-8a1 1 0 0 1 0-1.414l8-8a1 1 0 0 1 1.414 0Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 1`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M7.293 3.293a1 1 0 0 1 1.414 0l8 8a1 1 0 0 1 0 1.414l-8 8a1 1 0 0 1-1.414-1.414L14.586 12 7.293 4.707a1 1 0 0 1 0-1.414Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 2`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M11.293 6.293a1 1 0 0 1 1.414 0l8 8a1 1 0 0 1-1.414 1.414L12 8.414l-7.293 7.293a1 1 0 0 1-1.414-1.414l8-8Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 3`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 4`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 6a1 1 0 0 1 1 1v6a1 1 0 1 1-2 0V7a1 1 0 0 1 1-1Zm0 9.5a1 1 0 0 1 1 1v.5a1 1 0 1 1-2 0v-.5a1 1 0 0 1 1-1Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 5`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M16.64 8.732a1 1 0 0 1 .128 1.408l-5 6a1 1 0 0 1-1.475.067l-3-3a1 1 0 1 1 1.414-1.414l2.226 2.226 4.299-5.16a1 1 0 0 1 1.408-.127Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 6`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M7.293 9.793a1 1 0 0 1 1.414 0L12 13.086l3.293-3.293a1 1 0 1 1 1.414 1.414l-4 4a1 1 0 0 1-1.414 0l-4-4a1 1 0 0 1 0-1.414Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 7`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M14.207 7.293a1 1 0 0 1 0 1.414L10.914 12l3.293 3.293a1 1 0 0 1-1.414 1.414l-4-4a1 1 0 0 1 0-1.414l4-4a1 1 0 0 1 1.414 0Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 8`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M9.793 7.293a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1 0 1.414l-4 4a1 1 0 0 1-1.414-1.414L13.086 12 9.793 8.707a1 1 0 0 1 0-1.414Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 9`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M11.293 8.793a1 1 0 0 1 1.414 0l4 4a1 1 0 0 1-1.414 1.414L12 10.914l-3.293 3.293a1 1 0 0 1-1.414-1.414l4-4Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 10`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M7 12a1 1 0 0 1 1-1h8a1 1 0 1 1 0 2H8a1 1 0 0 1-1-1Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 11`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 7a1 1 0 0 1 1 1v3h3a1 1 0 1 1 0 2h-3v3a1 1 0 1 1-2 0v-3H8a1 1 0 1 1 0-2h3V8a1 1 0 0 1 1-1Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 12`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8.293 8.293a1 1 0 0 1 1.414 0L12 10.586l2.293-2.293a1 1 0 1 1 1.414 1.414L13.414 12l2.293 2.293a1 1 0 0 1-1.414 1.414L12 13.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L10.586 12 8.293 9.707a1 1 0 0 1 0-1.414Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 13`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 5a1 1 0 0 1 1 1v6.172a1 1 0 0 0 .293.707l2.414 2.414a1 1 0 0 1-1.414 1.414l-2.414-2.414a3 3 0 0 1-.879-2.12V6a1 1 0 0 1 1-1Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 14`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M7.879 1.879A3 3 0 0 1 10 1h4.685a3 3 0 0 1 2.097.855l3.315 3.242A3 3 0 0 1 21 7.242V16a3 3 0 0 1-3 3h-1v1a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V9a3 3 0 0 1 3-3h1V4a3 3 0 0 1 .879-2.121Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M7.879 1.879A3 3 0 0 1 10 1h4.685a3 3 0 0 1 2.097.855l3.315 3.242A3 3 0 0 1 21 7.242V16a3 3 0 0 1-3 3h-8a3 3 0 0 1-3-3V4a3 3 0 0 1 .879-2.121ZM10 3a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V7.242a1.001 1.001 0 0 0-.301-.715l-3.315-3.242A1 1 0 0 0 14.685 3H10Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M6 8a1 1 0 0 0-1 1v11a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-2a1 1 0 1 1 2 0v2a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V9a3 3 0 0 1 3-3h2a1 1 0 0 1 0 2H6Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 15`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M1.879 3.879A3 3 0 0 1 4 3h16a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H4a3 3 0 0 1-3-3V6a3 3 0 0 1 .879-2.121Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M4 5a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V6a1 1 0 0 0-1-1H4ZM1.879 3.879A3 3 0 0 1 4 3h16a3 3 0 0 1 3 3v12a3 3 0 0 1-3 3H4a3 3 0 0 1-3-3V6a3 3 0 0 1 .879-2.121Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"m8.876 14.782-7.5-6.001 1.249-1.562 7.5 6.001a3 3 0 0 0 3.75 0l7.5-6 1.25 1.56-7.501 6.002a5 5 0 0 1-6.248 0Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 16`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M11.992 4c4.502 0 8.202 4 10.103 6.4.7 1 .7 2.3 0 3.2-1.9 2.4-5.601 6.4-10.102 6.4C7.49 20 3.79 16.1 1.99 13.6c-.4-.4-.6-1-.6-1.6 0-.6.2-1.2.6-1.7C3.79 8 7.491 4 11.992 4Z\\" fill=\\"none\\"></path>
  <path d=\\"M22.095 10.4C20.195 8 16.494 4 11.993 4 7.49 4 3.79 8 1.99 10.3c-.4.5-.6 1.1-.6 1.7 0 .6.2 1.2.6 1.6 1.8 2.5 5.501 6.4 10.002 6.4 4.502 0 8.202-4 10.103-6.4.7-.9.7-2.2 0-3.2Zm-1.6 2.1c-1.3 1.6-4.702 5.5-8.503 5.5-3.8 0-7.201-3.9-8.501-5.6-.1-.1-.1-.3-.1-.4 0-.1.1-.3.1-.4C4.79 9.9 8.19 6 11.993 6c3.8 0 7.201 3.9 8.501 5.6.2.3.2.6 0 .9Z\\"></path>
  <path d=\\"M11.992 8c-2.2 0-4 1.8-4 4s1.8 4 4 4c2.201 0 4.001-1.8 4.001-4s-1.8-4-4-4Zm0 6c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 17`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M8.763 2a3 3 0 0 1 2.684 1.659l.894 1.788a1.001 1.001 0 0 0 .895.553H20a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3H4a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3h4.763Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8.763 2a3 3 0 0 1 2.684 1.659l.894 1.788a1.001 1.001 0 0 0 .895.553H20a3 3 0 0 1 3 3v10a3 3 0 0 1-3 3H4a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3h4.763Zm.527 2.15A1 1 0 0 0 8.763 4H4a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1V9a1 1 0 0 0-1-1h-6.764a3 3 0 0 1-2.684-1.659L9.66 4.553a1 1 0 0 0-.37-.404Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 18`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M12 4.5c1-1 2.8-2.5 5-2.5 3.3 0 6 2.7 6 6 0 2.8-1.3 8.3-10 13.6-.3.2-.6.3-1 .3-.3 0-.7-.1-1-.3C2.3 16.3 1 10.8 1 8c0-3.3 2.7-6 6-6 2.2 0 4 1.5 5 2.5Z\\" fill=\\"none\\"></path>
  <path d=\\"M17 2c-2.2 0-4 1.5-5 2.5C11 3.5 9.2 2 7 2 3.7 2 1 4.7 1 8c0 2.8 1.3 8.3 10 13.6.3.2.7.3 1 .3.4 0 .7-.1 1-.3C21.7 16.3 23 10.8 23 8c0-3.3-2.7-6-6-6Zm-5 17.9C4.2 15.1 3 10.4 3 8c0-2.2 1.8-4 4-4s4.2 2.6 4.2 2.6c.2.3.5.4.8.4.3 0 .6-.1.8-.4 0 0 2-2.6 4.2-2.6s4 1.8 4 4c0 2.4-1.2 7.1-9 11.9Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 19`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M2.464 2.464A5 5 0 0 1 6 1h12a5 5 0 0 1 5 5v12a5 5 0 0 1-5 5H6a5 5 0 0 1-5-5V6a5 5 0 0 1 1.464-3.536Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M6 3a3 3 0 0 0-3 3v12a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3V6a3 3 0 0 0-3-3H6Zm-3.536-.536A5 5 0 0 1 6 1h12a5 5 0 0 1 5 5v12a5 5 0 0 1-5 5H6a5 5 0 0 1-5-5V6a5 5 0 0 1 1.464-3.536Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M8.5 7a1.5 1.5 0 1 0 0 3 1.5 1.5 0 0 0 0-3ZM5 8.5a3.5 3.5 0 1 1 7 0 3.5 3.5 0 0 1-7 0Zm11 2.466a3 3 0 0 1 2.217.973l4.032 4.397.036.04c.13.14.32.347.457.59.182.32.258.656.258 1.034v.133A4.867 4.867 0 0 1 18.133 23H6a1 1 0 0 1-.74-1.673l8.526-9.379A3.003 3.003 0 0 1 16 10.966Zm-.734 2.328L8.26 21h9.873A2.867 2.867 0 0 0 21 18.133V18a.502.502 0 0 0-.003-.056.786.786 0 0 0-.045-.058 5.736 5.736 0 0 0-.159-.178l-.021-.024-4.03-4.393a1.002 1.002 0 0 0-1.476.003Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 20`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M23 12c0 6.075-4.925 11-11 11S1 18.075 1 12 5.925 1 12 1s11 4.925 11 11Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a9 9 0 1 0 0 18 9 9 0 0 0 0-18ZM1 12C1 5.925 5.925 1 12 1s11 4.925 11 11-4.925 11-11 11S1 18.075 1 12Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M11 7a1 1 0 0 1 1-1h.01a1 1 0 1 1 0 2H12a1 1 0 0 1-1-1Zm1 3a1 1 0 0 1 1 1v5a1 1 0 1 1-2 0v-5a1 1 0 0 1 1-1Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 21`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5 4a1 1 0 0 0-1 1v14a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-5a1 1 0 1 1 2 0v5a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3V5a3 3 0 0 1 3-3h5a1 1 0 1 1 0 2H5Zm10.076-1.383A1 1 0 0 1 16 2h5a.997.997 0 0 1 1 1v5a1 1 0 0 1-1.707.707L18.5 6.914l-4.293 4.293a1 1 0 0 1-1.414-1.414L17.086 5.5l-1.793-1.793a1 1 0 0 1-.217-1.09ZM19.914 5.5l.086.086v-.172l-.086.086ZM18.586 4l-.086.086L18.414 4h.172Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 22`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M5.636 3.636A9 9 0 0 1 21 10c0 1.017-.108 1.912-.389 2.76-.283.853-.724 1.608-1.33 2.365a.985.985 0 0 1-.025.03l-6.5 7.5a1 1 0 0 1-1.512 0l-6.5-7.5a1.017 1.017 0 0 1-.024-.03c-.607-.757-1.048-1.512-1.331-2.365C3.108 11.912 3 11.017 3 10a9 9 0 0 1 2.636-6.364Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 8a2 2 0 1 0 0 4 2 2 0 0 0 0-4Zm-4 2a4 4 0 1 1 8 0 4 4 0 0 1-8 0Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5.636 3.636A9 9 0 0 1 21 10c0 1.017-.108 1.912-.389 2.76-.283.853-.724 1.608-1.33 2.365a.985.985 0 0 1-.025.03l-6.5 7.5a1 1 0 0 1-1.512 0l-6.5-7.5a1.017 1.017 0 0 1-.024-.03c-.607-.757-1.048-1.512-1.331-2.365C3.108 11.912 3 11.017 3 10a9 9 0 0 1 2.636-6.364ZM12 3a7 7 0 0 0-7 7c0 .875.093 1.545.287 2.131.192.577.497 1.122.982 1.729L12 20.473l5.731-6.613c.485-.607.79-1.152.981-1.729.195-.586.288-1.256.288-2.131a7 7 0 0 0-7-7Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 23`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M2 12a3 3 0 0 1 3-3h14a3 3 0 0 1 3 3v8a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-8Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5 11a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-8a1 1 0 0 0-1-1H5Zm-3 1a3 3 0 0 1 3-3h14a3 3 0 0 1 3 3v8a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-8Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M9 3a2 2 0 0 0-2 2v5a1 1 0 1 1-2 0V5a4 4 0 0 1 4-4h6a4 4 0 0 1 4 4v1a1 1 0 1 1-2 0V5a2 2 0 0 0-2-2H9Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 24`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M2 12a3 3 0 0 1 3-3h14a3 3 0 0 1 3 3v8a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-8Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5 11a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h14a1 1 0 0 0 1-1v-8a1 1 0 0 0-1-1H5Zm-3 1a3 3 0 0 1 3-3h14a3 3 0 0 1 3 3v8a3 3 0 0 1-3 3H5a3 3 0 0 1-3-3v-8Z\\"></path>
  <path d=\\"M6.172 3.172A4 4 0 0 1 9 2h6a4 4 0 0 1 4 4v4a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V6a4 4 0 0 1 1.172-2.828Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M9 4a2 2 0 0 0-2 2v3h10V6a2 2 0 0 0-2-2H9Zm-2.828-.828A4 4 0 0 1 9 2h6a4 4 0 0 1 4 4v4a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V6a4 4 0 0 1 1.172-2.828Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 25`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M3 12a1 1 0 0 1 1-1h16a1 1 0 1 1 0 2H4a1 1 0 0 1-1-1Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 26`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M9.133 2.787a5 5 0 0 1 5.735 0l6 4.2A5 5 0 0 1 23 11.083V19a3 3 0 0 1-3 3H4a3 3 0 0 1-3-3v-7.917a5 5 0 0 1 2.132-4.096l6-4.2Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3.883a3 3 0 0 0-1.72.542l-6 4.2A3 3 0 0 0 3 11.083V19a1 1 0 0 0 1 1h16a1 1 0 0 0 1-1v-7.917a3 3 0 0 0-1.28-2.458l-6-4.2A3 3 0 0 0 12 3.883ZM9.133 2.787a5 5 0 0 1 5.735 0l6 4.2A5 5 0 0 1 23 11.083V19a3 3 0 0 1-3 3H4a3 3 0 0 1-3-3v-7.917a5 5 0 0 1 2.132-4.096l6-4.2Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"m8.876 15.782-7.5-6.001 1.249-1.562 7.5 6.001a3 3 0 0 0 3.75 0l7.5-6 1.25 1.56-7.501 6.002a5 5 0 0 1-6.248 0Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 27`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M3.879 1.879A3 3 0 0 1 6 1h7.56a3 3 0 0 1 2.097.855l4.44 4.342A3.003 3.003 0 0 1 21 8.342V20a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V4a3 3 0 0 1 .879-2.121Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M3.879 1.879A3 3 0 0 1 6 1h7.56a3 3 0 0 1 2.097.855l4.44 4.342A3.003 3.003 0 0 1 21 8.342V20a3 3 0 0 1-3 3H6a3 3 0 0 1-3-3V4a3 3 0 0 1 .879-2.121ZM6 3a1 1 0 0 0-1 1v16a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V8.342a1.001 1.001 0 0 0-.301-.715l-4.44-4.342A1 1 0 0 0 13.56 3H6Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M13 6V2h2v4a1 1 0 0 0 1 1h4v2h-4a3 3 0 0 1-3-3Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 28`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M3.626 15.34 15.863 3.104l.016-.015a3.56 3.56 0 0 1 5.034 5.032l-.016.016L8.658 20.374a3 3 0 0 1-1.533.82l-3.929.787a1 1 0 0 1-1.177-1.177l.786-3.93a3 3 0 0 1 .82-1.533Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M17.268 4.526 5.04 16.756a1 1 0 0 0-.273.51l-.492 2.46 2.458-.493a1 1 0 0 0 .51-.273L19.475 6.73a1.56 1.56 0 0 0-2.206-2.204ZM3.626 15.34 15.863 3.103l.016-.015a3.56 3.56 0 0 1 5.034 5.032l-.016.016L8.658 20.374a3 3 0 0 1-1.533.82l-3.929.787a1 1 0 0 1-1.177-1.177l.786-3.93a3 3 0 0 1 .82-1.533Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"m16.793 10.207-3-3 1.414-1.414 3 3-1.414 1.414Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 29`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M17.982 7.027c0 3.315-2.712 6.028-6.027 6.028s-6.027-2.713-6.027-6.028C5.928 3.712 8.64 1 11.955 1s6.027 2.712 6.027 6.027Z\\" fill=\\"none\\"></path>
  <path d=\\"M11.955 13.055c3.315 0 6.027-2.713 6.027-6.028C17.982 3.712 15.27 1 11.955 1S5.928 3.712 5.928 7.027s2.712 6.028 6.027 6.028Zm0-10.046a4.03 4.03 0 0 1 4.018 4.018 4.03 4.03 0 0 1-4.018 4.019 4.03 4.03 0 0 1-4.018-4.019 4.03 4.03 0 0 1 4.018-4.018Z\\"></path>
  <path d=\\"m21.698 19.685-.401-3.114a3.843 3.843 0 0 0-1.306-2.512c-.703-.602-1.708-1.004-2.612-1.004h-.402c-.602 0-1.004.402-1.004 1.004 0 .603.402 1.005 1.004 1.005h.402c.502 0 1.005.2 1.306.502.402.302.603.804.703 1.206l.402 3.114v.402c0 .1-.1.301-.201.401-.1.101-.2.201-.301.201-.1.1-.302.1-.402.1H5.225c-.1 0-.302 0-.402-.1-.1-.1-.201-.1-.302-.2-.1-.101-.2-.201-.2-.402 0-.1-.1-.302 0-.402l.401-3.114a2.4 2.4 0 0 1 .704-1.306c.401-.302.803-.502 1.305-.502h.402c.603 0 1.005-.402 1.005-1.005 0-.603-.402-1.005-1.005-1.005h-.502c-1.005 0-1.909.402-2.612 1.005a3.842 3.842 0 0 0-1.306 2.511l-.401 3.114c-.1.402 0 .905.1 1.306.1.402.301.804.603 1.105.301.302.602.603 1.004.704.402.2.804.301 1.206.301h13.56c.402 0 .804-.1 1.206-.301.401-.201.703-.402 1.004-.804.302-.301.502-.703.603-1.105.1-.301.2-.703.1-1.105Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 30`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M17 7c0 2.75-2.25 5-5 5S7 9.75 7 7s2.25-5 5-5 5 2.25 5 5Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a4 4 0 1 0 0 8 4 4 0 0 0 0-8ZM6 7a6 6 0 1 1 12 0A6 6 0 0 1 6 7Zm13 5a1 1 0 0 1 1 1v2h2a1 1 0 1 1 0 2h-2v2a1 1 0 1 1-2 0v-2h-2a1 1 0 1 1 0-2h2v-2a1 1 0 0 1 1-1ZM6.649 15a2 2 0 0 0-1.986 1.752l-.39 3.124A1 1 0 0 0 5.266 21H17a1 1 0 1 1 0 2H5.266a3 3 0 0 1-2.977-3.372l.39-3.124A4 4 0 0 1 6.649 13a1 1 0 1 1 0 2Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 31`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M17 7c0 2.75-2.25 5-5 5S7 9.75 7 7s2.25-5 5-5 5 2.25 5 5Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a4 4 0 1 0 0 8 4 4 0 0 0 0-8ZM6 7a6 6 0 1 1 12 0A6 6 0 0 1 6 7Zm16.684 6.27a1 1 0 0 1 .046 1.414l-3.75 4a1 1 0 0 1-1.394.063l-2.25-2a1 1 0 0 1 1.328-1.494l1.522 1.353 3.084-3.29a1 1 0 0 1 1.414-.046ZM6.649 15a2 2 0 0 0-1.986 1.752l-.39 3.124A1 1 0 0 0 5.266 21H17a1 1 0 1 1 0 2H5.266a3 3 0 0 1-2.977-3.372l.39-3.124A4 4 0 0 1 6.649 13a1 1 0 1 1 0 2Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 32`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M17 7c0 2.75-2.25 5-5 5S7 9.75 7 7s2.25-5 5-5 5 2.25 5 5Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a4 4 0 1 0 0 8 4 4 0 0 0 0-8ZM6 7a6 6 0 1 1 12 0A6 6 0 0 1 6 7Zm.649 8a2 2 0 0 0-1.986 1.752l-.39 3.124A1 1 0 0 0 5.266 21H17a1 1 0 1 1 0 2H5.266a3 3 0 0 1-2.977-3.372l.39-3.124A4 4 0 0 1 6.649 13H7a1 1 0 1 1 0 2h-.351Zm9.644-1.707a1 1 0 0 1 1.414 0l1.793 1.793 1.793-1.793a1 1 0 0 1 1.414 1.414L20.914 16.5l1.793 1.793a1 1 0 0 1-1.414 1.414L19.5 17.914l-1.793 1.793a1 1 0 0 1-1.414-1.414l1.793-1.793-1.793-1.793a1 1 0 0 1 0-1.414Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 33`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M4.906 1.635c.808-.811 2.202-.9 3.021.045l3.359 3.877a.83.83 0 0 1 .024.027c.74.854.588 2.086-.148 2.825l-.001.002-1.073 1.073a13.558 13.558 0 0 0 4.412 4.418l1.074-1.076c.737-.738 1.965-.89 2.818-.159l3.92 3.365c.952.819.865 2.219.053 3.03l-2.807 2.813c-1.102 1.102-2.785 1.461-4.188.78A30.207 30.207 0 0 1 1.345 8.61c-.68-1.404-.322-3.086.779-4.188l2.782-2.787Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M4.905 1.635c.81-.811 2.203-.9 3.022.045l3.359 3.877.024.027c.74.854.588 2.086-.148 2.825l-.001.002-1.073 1.073a13.558 13.558 0 0 0 4.412 4.418l1.074-1.076c.737-.738 1.965-.89 2.818-.159l3.92 3.365c.952.819.865 2.219.053 3.03l-2.807 2.813c-1.102 1.102-2.785 1.461-4.188.78A30.207 30.207 0 0 1 1.345 8.61c-.68-1.404-.322-3.086.778-4.188m0 0 2.782-2.787m9.29 12.573.008-.009-.008.009Zm-4.411-4.42.009-.009a.524.524 0 0 1-.009.01Zm.01-2.903v.002-.002Zm0 .005L6.424 3l-.005-.001a.146.146 0 0 0-.098.048L3.54 5.835c-.555.555-.67 1.334-.394 1.903v.002a28.208 28.208 0 0 0 13.097 13.115c.569.276 1.346.161 1.9-.393l2.809-2.813a.151.151 0 0 0 .049-.107l-3.905-3.352h-.011a.153.153 0 0 0-.094.048l-1.358 1.36a1.461 1.461 0 0 1-1.74.269l-.014-.008-.012-.006a15.557 15.557 0 0 1-5.742-5.76 1.463 1.463 0 0 1 .268-1.74l1.352-1.354a.161.161 0 0 0 .05-.098V6.89Zm7.305 7.3h-.002.002Zm-.01-.005Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 34`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M6.257 3.033c.09.024.176.06.254.107l14.196 8.153a1.004 1.004 0 0 1 .205 1.117.996.996 0 0 1-.43.467l-13.97 7.982a.993.993 0 0 1-.614.136.995.995 0 0 1-.711-.413.996.996 0 0 1-.187-.6V4.018a.994.994 0 0 1 .498-.883.994.994 0 0 1 .759-.102Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M6.511 3.14a.994.994 0 0 0-1.013-.005.994.994 0 0 0-.498.883v15.964a.994.994 0 0 0 .498.883.994.994 0 0 0 1.013-.005l13.97-7.983a.997.997 0 0 0 .387-1.373c-.045-.08-.1-.15-.16-.211M17.983 12 7 18.277V5.723L17.984 12Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 35`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 3a1 1 0 0 1 1 1v7h7a1 1 0 1 1 0 2h-7v7a1 1 0 1 1-2 0v-7H4a1 1 0 1 1 0-2h7V4a1 1 0 0 1 1-1Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 36`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <circle cx=\\"9\\" cy=\\"5\\" r=\\"2\\" fill=\\"none\\"></circle>
  <circle cx=\\"17\\" cy=\\"12\\" r=\\"2\\" fill=\\"none\\"></circle>
  <circle cx=\\"7\\" cy=\\"19\\" r=\\"2\\" fill=\\"none\\"></circle>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M2 5a1 1 0 0 1 1-1h4a1 1 0 0 1 0 2H3a1 1 0 0 1-1-1Zm8 0a1 1 0 0 1 1-1h10a1 1 0 1 1 0 2H11a1 1 0 0 1-1-1Zm-8 7a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1Zm16 0a1 1 0 0 1 1-1h2a1 1 0 1 1 0 2h-2a1 1 0 0 1-1-1ZM2 19a1 1 0 0 1 1-1h2a1 1 0 1 1 0 2H3a1 1 0 0 1-1-1Zm6 0a1 1 0 0 1 1-1h12a1 1 0 1 1 0 2H9a1 1 0 0 1-1-1Z\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M9 4a1 1 0 1 0 0 2 1 1 0 0 0 0-2ZM6 5a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm11 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm-3 1a3 3 0 1 1 6 0 3 3 0 0 1-6 0Zm-7 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2Zm-3 1a3 3 0 1 1 6 0 3 3 0 0 1-6 0Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 37`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M5 2a1 1 0 0 1 1 1v2a1 1 0 0 1-2 0V3a1 1 0 0 1 1-1Zm7 0a1 1 0 0 1 1 1v12a1 1 0 1 1-2 0V3a1 1 0 0 1 1-1Zm7 0a1 1 0 0 1 1 1v4a1 1 0 1 1-2 0V3a1 1 0 0 1 1-1ZM5 8a1 1 0 0 1 1 1v12a1 1 0 1 1-2 0V9a1 1 0 0 1 1-1Zm14 2a1 1 0 0 1 1 1v10a1 1 0 1 1-2 0V11a1 1 0 0 1 1-1Zm-7 8a1 1 0 0 1 1 1v2a1 1 0 1 1-2 0v-2a1 1 0 0 1 1-1Z\\"></path>
  <circle cx=\\"5\\" cy=\\"7\\" r=\\"3\\" fill=\\"none\\"></circle>
  <circle cx=\\"19\\" cy=\\"9\\" r=\\"2\\" fill=\\"none\\"></circle>
  <circle cx=\\"12\\" cy=\\"17\\" r=\\"2\\" fill=\\"none\\"></circle>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M19.999 9.3a1 1 0 1 0-2 0 1 1 0 0 0 2 0Zm-1-3a3 3 0 1 1 0 6 3 3 0 0 1 0-6ZM13 17a1 1 0 1 0-2 0 1 1 0 0 0 2 0Zm-1-3a3 3 0 1 1 0 6 3 3 0 0 1 0-6ZM6 7a1 1 0 1 0-2 0 1 1 0 0 0 2 0ZM5 4a3 3 0 1 1 0 6 3 3 0 0 1 0-6Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 38`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M11.56 1.102a1 1 0 0 1 .88 0l7.81 3.818a1.837 1.837 0 0 1 .994 1.287 14.395 14.395 0 0 1-5.854 14.641l-1.67 1.168a3 3 0 0 1-3.44 0L8.61 20.85A14.394 14.394 0 0 1 2.757 6.207v-.001A1.837 1.837 0 0 1 3.75 4.92h.001l7.809-3.818Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M11.56 1.102a1 1 0 0 1 .88 0l7.81 3.818a1.837 1.837 0 0 1 .994 1.287 14.395 14.395 0 0 1-5.854 14.641l-1.67 1.168a3 3 0 0 1-3.44 0L8.61 20.85A14.394 14.394 0 0 1 2.757 6.207v-.001A1.837 1.837 0 0 1 3.75 4.92h.001l7.809-3.818Zm1.014 19.276 1.67-1.168a12.395 12.395 0 0 0 5.055-12.528L12 3.113l-7.3 3.57a12.393 12.393 0 0 0 5.057 12.526l1.67 1.169a1 1 0 0 0 1.147 0Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 39`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M19.934 7.8c.599.5.898 1.2.998 2l.898 9.9c0 .4-.1.8-.2 1.2-.1.4-.299.8-.598 1.1-.3.3-.6.5-.998.7-.4.2-.799.3-1.198.3H5.164c-.4 0-.798 0-1.198-.2-.399-.2-.698-.4-.998-.7-.2-.3-.499-.7-.598-1.1-.2-.4-.2-.8-.2-1.2l.699-10c.1-.8.399-1.5.998-2 .598-.5 1.297-.8 2.095-.8h.998V6c0-1.3.5-2.6 1.497-3.5.898-1 2.196-1.5 3.493-1.5 1.297 0 2.595.6 3.493 1.5.998.9 1.497 2.2 1.497 3.5v1h.998c.699 0 1.397.3 1.996.8Z\\" fill=\\"none\\"></path>
  <path d=\\"M20.932 9.8c-.1-.8-.4-1.5-.998-2-.599-.5-1.297-.8-1.996-.8h-.998V6c0-1.3-.499-2.6-1.497-3.5-.898-.9-2.195-1.5-3.493-1.5-1.297 0-2.595.5-3.493 1.5C7.46 3.4 6.96 4.7 6.96 6v1h-.998c-.798 0-1.497.3-2.095.8-.6.5-.899 1.2-.998 2l-.699 10c0 .4 0 .8.2 1.2.1.4.399.8.598 1.1.3.3.6.5.998.7.4.2.799.2 1.198.2h13.672c.4 0 .799-.1 1.198-.3.399-.2.698-.4.998-.7.299-.3.499-.7.598-1.1.1-.4.2-.8.2-1.2l-.898-9.9ZM8.956 6c0-.8.3-1.6.898-2.1 1.098-1.1 3.094-1.1 4.192 0 .599.6.898 1.3.898 2.1v1H8.956V6Zm10.778 14.4c0 .1-.1.3-.2.4-.1.1-.199.2-.299.2H5.164c-.1 0-.3 0-.4-.1-.1-.1-.199-.1-.299-.2-.1-.1-.2-.2-.2-.3-.1-.2-.1-.3-.1-.4l.8-10c0-.3.1-.5.299-.7.2-.2.399-.3.698-.3h.998v2c0 .6.4 1 .998 1 .599 0 .998-.4.998-1V9h5.988v2c0 .6.4 1 .998 1 .599 0 .998-.4.998-1V9h.998c.3 0 .499.1.699.3.2.2.299.4.299.7l.798 10v.4Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 40`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M15 12a1 1 0 0 1 1-1h6a1 1 0 1 1 0 2h-6a1 1 0 0 1-1-1Z\\"></path>
  <path d=\\"M9.572 3.614C10.886 2.245 13 3.304 13 5.043v13.914c0 1.753-2.141 2.804-3.446 1.41a1.15 1.15 0 0 1-.018-.02L6.566 17H3c-1.142 0-2-.952-2-2.041V9.04C1 7.951 1.86 7 3 7h3.573l2.971-3.356a.988.988 0 0 1 .028-.03Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"m10.998 5.02.002.023v13.914c0 .01 0 .019-.002.024l-2.956-3.33-.014-.017A1.98 1.98 0 0 0 6.58 15H3.012A.064.064 0 0 1 3 14.959V9.04c0-.02.007-.033.012-.04H6.59a1.98 1.98 0 0 0 1.452-.642l2.956-3.339ZM9.572 3.613C10.886 2.245 13 3.304 13 5.043v13.914c0 1.753-2.141 2.804-3.446 1.41l-.018-.02L6.566 17H3c-1.142 0-2-.952-2-2.041V9.04C1 7.951 1.86 7 3 7h3.573l2.971-3.356.028-.03Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 41`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M9.572 3.614C10.886 2.245 13 3.304 13 5.043v13.914c0 1.753-2.141 2.804-3.446 1.41a1.15 1.15 0 0 1-.018-.02L6.566 17H3c-1.142 0-2-.952-2-2.041V9.04C1 7.951 1.86 7 3 7h3.573l2.971-3.356a.988.988 0 0 1 .028-.03Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M15.293 8.293a1 1 0 0 1 1.414 0L19 10.586l2.293-2.293a1 1 0 1 1 1.414 1.414L20.414 12l2.293 2.293a1 1 0 0 1-1.414 1.414L19 13.414l-2.293 2.293a1 1 0 0 1-1.414-1.414L17.586 12l-2.293-2.293a1 1 0 0 1 0-1.414ZM10.998 5.02l.002.023v13.914c0 .01 0 .019-.002.024l-2.956-3.33-.014-.017A1.98 1.98 0 0 0 6.58 15H3.012A.064.064 0 0 1 3 14.959V9.04c0-.02.007-.033.012-.04H6.59a1.98 1.98 0 0 0 1.452-.642l2.956-3.339ZM9.572 3.613C10.886 2.245 13 3.304 13 5.043v13.914c0 1.753-2.141 2.804-3.446 1.41l-.018-.02L6.566 17H3c-1.142 0-2-.952-2-2.041V9.04C1 7.951 1.86 7 3 7h3.573l2.971-3.356.028-.03Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 42`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M9.572 3.614C10.886 2.245 13 3.304 13 5.043v13.914c0 1.753-2.141 2.804-3.446 1.41a1.15 1.15 0 0 1-.018-.02L6.566 17H3c-1.142 0-2-.952-2-2.041V9.04C1 7.951 1.86 7 3 7h3.573l2.971-3.356a.988.988 0 0 1 .028-.03Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"m10.998 5.02.002.023v13.914c0 .01 0 .019-.002.024l-2.956-3.33-.014-.017A1.98 1.98 0 0 0 6.58 15H3.012A.064.064 0 0 1 3 14.959V9.04c0-.02.007-.033.012-.04H6.59a1.98 1.98 0 0 0 1.452-.642l2.956-3.339ZM9.572 3.613C10.886 2.245 13 3.304 13 5.043v13.914c0 1.753-2.141 2.804-3.446 1.41l-.018-.02L6.566 17H3c-1.142 0-2-.952-2-2.041V9.04C1 7.951 1.86 7 3 7h3.573l2.971-3.356.028-.03Zm8.705.695a1 1 0 0 1 1.414-.032c4.396 4.198 4.43 11.269-.005 15.45a1 1 0 1 1-1.372-1.455c3.59-3.384 3.575-9.13-.005-12.549a1 1 0 0 1-.032-1.414ZM15.4 7.7a1 1 0 0 1 1.4.201c.836 1.115 1.2 2.655 1.2 4.1 0 1.445-.364 2.985-1.2 4.1a1 1 0 0 1-1.6-1.2c.497-.663.8-1.734.8-2.9s-.303-2.237-.8-2.9a1 1 0 0 1 .2-1.4Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 43`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M9.572 3.614C10.886 2.245 13 3.304 13 5.043v13.914c0 1.753-2.141 2.804-3.446 1.41a1.15 1.15 0 0 1-.018-.02L6.566 17H3c-1.142 0-2-.952-2-2.041V9.04C1 7.951 1.86 7 3 7h3.573l2.971-3.356a.988.988 0 0 1 .028-.03Z\\" fill=\\"none\\"></path>
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M19 8a1 1 0 0 1 1 1v2h2a1 1 0 1 1 0 2h-2v2a1 1 0 1 1-2 0v-2h-2a1 1 0 1 1 0-2h2V9a1 1 0 0 1 1-1Zm-8.002-2.98.002.023v13.914c0 .01 0 .019-.002.024l-2.956-3.33-.014-.017A1.98 1.98 0 0 0 6.58 15H3.012A.064.064 0 0 1 3 14.959V9.04c0-.02.007-.033.012-.04H6.59a1.98 1.98 0 0 0 1.452-.642l2.956-3.339ZM9.572 3.613C10.886 2.245 13 3.304 13 5.043v13.914c0 1.753-2.141 2.804-3.446 1.41l-.018-.02L6.566 17H3c-1.142 0-2-.952-2-2.041V9.04C1 7.951 1.86 7 3 7h3.573l2.971-3.356.028-.03Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 44`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M21.746 9.487c.601.4 1.002 1.1 1.203 1.802.2 1-.2 1.901-1.003 3.703l-.3.8c-.201.301-.201.702-.201 1.002.2 1.601-.401 3.303-1.605 4.504C18.838 22.4 17.434 23 15.93 23h-.301L5.2 22.5c-1.203-.1-2.005-.1-2.808-.801-.702-.701-.902-1.402-1.103-2.403-.4-2.202-.4-4.404.1-6.506.402-1.702 2.006-2.703 3.811-2.502 1.203.2 2.507-.2 3.51-1.001 1.103-.901 1.805-2.102 1.905-3.504l.2-2.402c.1-.801.502-1.502 1.104-1.902.601-.4 1.303-.6 2.005-.4 1.705.5 3.008 2.102 3.008 4.003v3.804h1.103c1.906 0 2.908 0 3.71.6Z\\" fill=\\"none\\"></path>
  <path d=\\"M22.949 11.289c-.2-.701-.602-1.402-1.203-1.802-.803-.6-1.805-.6-3.71-.6h-1.104V5.081c0-1.901-1.303-3.503-3.008-4.003-.702-.2-1.404 0-2.005.4-.602.4-1.003 1.101-1.104 1.902l-.2 2.402c-.1 1.402-.802 2.603-1.905 3.504-1.003.8-2.307 1.2-3.51 1-1.805-.2-3.41.801-3.81 2.503-.502 2.102-.502 4.304-.1 6.506.2 1.001.4 1.702 1.102 2.403.803.7 1.605.7 2.808.8L15.63 23h.3c1.505 0 2.909-.6 3.911-1.702 1.204-1.2 1.805-2.902 1.605-4.504 0-.3 0-.7.2-1.001l.301-.8c.802-1.803 1.203-2.704 1.003-3.704ZM3.696 20.096c-.2-.2-.3-.4-.501-1.301-.402-1.902-.402-3.804.1-5.606.2-.7.802-1 1.404-1H5.7a16.26 16.26 0 0 0 0 8.208h-.4c-1.104 0-1.404-.1-1.605-.3Zm16.445-5.906-.3.801a6.26 6.26 0 0 0-.302 1.902c.1 1.101-.3 2.202-1.103 3.003-.701.7-1.704 1.101-2.707 1.101l-7.922-.5c-.902-2.703-.902-5.606-.1-8.309l.1-.4c.702-.2 1.404-.6 2.006-1.101 1.504-1.201 2.406-2.903 2.607-4.905l.2-2.402c0-.2.201-.4.201-.4.1 0 .2-.1.401-.1.903.2 1.605 1.1 1.605 2.101v3.003c0 .801 0 1.302.3 1.802.2.3.401.5.702.7.502.301 1.003.301 1.805.301h.401c1.204 0 2.206 0 2.507.2.2.1.301.4.401.6.1.501-.3 1.402-.802 2.603Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 45`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path d=\\"M18.62 5.081h3.384c.598 0 .996.399.996.996s-.398.995-.995.995H20.91l-1.494 13.24c-.1.697-.398 1.394-.995 1.892-.598.497-1.294.796-2.09.796H7.57c-.698 0-1.395-.299-1.992-.796-.597-.498-.896-1.195-.995-1.892L3.09 7.072H1.994c-.597 0-.995-.398-.995-.995s.398-.996.995-.996H5.38l1.095-2.29c.2-.497.597-.995 1.095-1.293C8.068 1.199 8.566 1 9.163 1h5.674c.597 0 1.095.2 1.593.498s.896.697 1.095 1.294l1.095 2.29Z\\" fill=\\"none\\"></path>
  <path d=\\"M22.005 5.081H18.62l-1.095-2.29c-.2-.596-.597-.995-1.095-1.293-.498-.299-.996-.498-1.593-.498H9.163c-.597 0-1.095.2-1.593.498a2.752 2.752 0 0 0-1.095 1.294L5.38 5.082H1.995c-.597 0-.995.398-.995.995s.398.995.995.995H3.09l1.494 13.24c.1.697.398 1.394.995 1.892.597.497 1.294.796 1.991.796h8.76c.797 0 1.494-.299 2.09-.796.598-.498.897-1.195.996-1.892l1.494-13.24h1.095c.597 0 .995-.398.995-.995s-.398-.996-.995-.996ZM8.267 3.588c0-.1.2-.298.398-.298.1-.1.299-.2.498-.2h5.575c.199 0 .298.1.497.2.2.1.299.199.399.398l.696 1.393H7.57l.697-1.493Zm9.158 16.525c0 .2-.1.398-.298.597-.2.2-.498.3-.697.3H7.57c-.299 0-.498-.1-.697-.3-.199-.1-.298-.398-.298-.597L5.08 7.073h13.84l-1.494 13.04Z\\"></path>
  <path d=\\"M13.941 17.027a.998.998 0 0 0 .996-.995v-4.978c0-.597-.398-.995-.996-.995-.597 0-.995.398-.995.995v4.978c0 .597.398.995.995.995Zm-3.981 0a.997.997 0 0 0 .995-.995v-4.978c0-.597-.398-.995-.996-.995-.597 0-.995.398-.995.995v4.978c0 .597.398.995.995.995Z\\"></path>
</svg>"
`;

exports[`icons IconArrow renders correctly 46`] = `
"<svg xmlns=\\"http://www.w3.org/2000/svg\\" viewBox=\\"0 0 24 24\\" fill=\\"currentColor\\" style=\\"height: 24px; width: 24px;\\">
  <path fill-rule=\\"evenodd\\" clip-rule=\\"evenodd\\" d=\\"M12 6c-3.161 0-6.406 1.5-9.257 4.669A1 1 0 1 1 1.257 9.33C4.406 5.831 8.16 4 12 4c3.839 0 7.594 1.832 10.743 5.331a1 1 0 1 1-1.486 1.338C18.406 7.5 15.16 5.999 12 5.999Zm0 6c-1.761 0-3.606.835-5.257 2.669a1 1 0 1 1-1.486-1.338C7.206 11.165 9.56 10 12 10s4.794 1.165 6.743 3.331a1 1 0 1 1-1.486 1.338C15.606 12.835 13.76 12 12 12Zm-2 6a2 2 0 1 1 4 0 2 2 0 0 1-4 0Z\\"></path>
</svg>"
`;
